[package]
authors = ["nglmercer"]
edition = "2021"
name    = "nokhwa-node"
version = "0.1.6"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow      = "1.0"
napi        = { version = "3.0.0", features = ["serde-json"] }
napi-derive = "3.0.0"
nokhwa      = { version = "0.10.0", features = ["input-native", "output-threaded"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
